# foundry

./: .gitignore  Cargo.toml  README.md  justfile
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
crates/foundry-cli/: Cargo.toml
crates/foundry-cli/src/: agent_sandbox.rs  attempt.rs  cgroup_policy.rs  digest_boundary.rs  indexer.rs  lease.rs  main.rs  manifest.rs  promotion.rs  review_policy.rs  review_session.rs  runner.rs  sweep.rs  task_contract.rs  tdd_policy.rs  telemetry.rs
crates/foundry-cli/src/commands/: ask.rs  common.rs  evolution.rs  iterate.rs  job.rs  mod.rs  plan.rs  propose.rs  review.rs  snapshot.rs
crates/foundry-cli/tests/: evolution.rs  index_lease.rs  plan_paths.rs  plan_reconcile_apply.rs  propose_plan_paths.rs  retention_sweep.rs  review_editor.rs  snapshot_wal.rs  vertical_slice.rs
crates/foundry-core/: Cargo.toml
crates/foundry-core/src/: db.rs  discourse.rs  embed.rs  event.rs  evidence_store.rs  evolution.rs  graph.rs  job.rs  lib.rs  living.rs  migration_registry.rs  migration_storage.rs  plan.rs  plan_reconcile.rs  review.rs  rules.rs  search.rs
crates/foundry-core/src/db/: schema.rs
crates/foundry-core/src/graph/: job_store.rs  review_store.rs
crates/foundry-core/tests/: evolution.rs
docs/: status.md
docs/adr/: 0001-architecture-budgets.md  0001-living-systems-conformance.md
examples/: check_table_info.rs
plans/: bootstrap.plan.md  features.plan.md  foundry-stage.plan.md  harden-foundry-cgroup-fail-closed.plan.md  read-path.plan.md  rule-diagnostics-findings.md  security-hardening.plan.md  split-main-rs.plan.md  tdd-baseline-hygiene.plan.md
scripts/: check-architecture-budgets.sh  check-source-policies.sh  gate-fast.sh  gate-full.sh  sync-readme-status.sh
