[workspace]
members = ["crates/foundry-core", "crates/foundry-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Foundry Contributors"]

[workspace.dependencies]
foundry-core = { path = "crates/foundry-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
