[package]
name = "foundry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
foundry-core.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde_json = "1"
serde = { workspace = true, features = ["derive"] }
walkdir = "2"
chrono = "0.4"
uuid = "1"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
